--- a/src/authed/index.html
+++ b/src/authed/index.html
@@ -2,12 +2,13 @@
 <link rel="preconnect" href="https://api.seankhliao.com/" crossorigin />
 <title>authed | seankhliao</title>
 
-<script src="/__/firebase/6.1.1/firebase.js"></script>
-<script src="/__/firebase/init.js"></script>
-<script src="https://cdn.firebase.com/libs/firebaseui/4.0.0/firebaseui.js"></script>
-<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+<script defer src="/__/firebase/6.2.0/firebase-app.js"></script>
+<script defer src="/__/firebase/6.2.0/firebase-auth.js"></script>
+<script defer src="/__/firebase/init.js"></script>
+<script defer src="https://cdn.firebase.com/libs/firebaseui/4.0.0/firebaseui.js"></script>
+<script defer src="/authed/index.js"></script>
 
-<script async src="/authed/index.js"></script>
+<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
 <h4><a href="/">seankhliao</a> / <mark>authed</mark></h1>
 <p>authenticated test page</p>
