--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -2,7 +2,7 @@
 <link rel="preconnect" href="https://api.seankhliao.com/" crossorigin />
 <title>readss | seankhliao</title>
 
-<script async src="/readss/index.js"></script>
+<script defer src="/readss/index.js"></script>
 
 <style>
   ::-webkit-scrollbar {
