add preconnect for firebaseui

--- a/src/authed/index.html
+++ b/src/authed/index.html
@@ -1,5 +1,6 @@
 {{ template "head" }}
 <link rel="preconnect" href="https://api.seankhliao.com/" crossorigin />
+<link rel="preconnect" href="https://cdn.firebase.com/" crossorigin />
 <title>authed | seankhliao</title>
 
 <script defer src="/__/firebase/6.2.0/firebase-app.js"></script>
