--- a/src/404.html
+++ b/src/404.html
@@ -1,4 +1,4 @@
-{{ template "head" }}
+{{ template "head"  . }}
 <title>404 | seankhliao</title>
     <header>
       <h1><a href="/" tabindex="-1">S</a></h1>
