--- a/src/authed/index.html
+++ b/src/authed/index.html
@@ -1,4 +1,4 @@
-{{ template "head" }}
+{{ template "head"  . }}
 <link rel="preconnect" href="https://cdn.firebase.com/" crossorigin />
 <title>authed | seankhliao</title>
 
