--- a/src/readss/index.html
+++ b/src/readss/index.html
@@ -1,4 +1,4 @@
-{{ template "head" }}
+{{ template "head"  . }}
 <title>readss | seankhliao</title>
 
 <script defer src="/readss/index.js"></script>
