--- a/src/index.html
+++ b/src/index.html
@@ -32,17 +32,16 @@ body {
     <section>
       <h4>Hey, I'm <mark>Sean</mark></h4>
 
-      <h6><mark>Bleeding Edge Software Developer</mark></h6>
+      <h6><mark>Bleeding Edge</mark> Software Developer</h6>
       <p>I have too much time to follow the hype and my stuff is always half-broken</p>
 
-      <h6><mark>Cloud Native Gopher</mark></h6>
+      <h6>Cloud Native <mark>Gopher</mark></h6>
       <p>Writes <strong>Go</strong>, runs <strong>Kubernetes</strong></p>
     </section>
 
     <section>
       <h5>Where to <mark>Find</mark> Me</h5>
       <ul>
-        <li><a href="/blog">Blog</a> — home of random thoughts</li>
         <li><a href="mailto:sean@seankhliao.com">Email</a> — mail, for <em>me</em>?</li>
         <li><a href="https://github.com/seankhliao">Github</a> — build first, regret later</li>
         <li><a href="https://github.com/erred">Github Org</a> — where old code goes to die</li>
@@ -52,24 +51,12 @@ body {
     <section>
       <h5>Get Into My <mark>Mind</mark></h5>
       <ul>
-        <li>
-          <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a>
-          — getting sadder
-        </li>
-        <li>
-          <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1E9SEgcQFsXQMv">Spotify 2017 Playlist</a>
-          — more pop?
-        </li>
-        <li>
-          <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM">Spotify 2016 Playlist</a>
-          — pop?
-        </li>
-        <li>
-          <a href="/readss">readss</a> — feed of things to read
-        </li>
-        <li>
-          <a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness
-        </li>
+        <li><a href="/blog">Blog</a> — home of random thoughts</li>
+        <li><a href="/readss">readss</a> — feed of things to read</li>
+        <li><a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness</li>
+        <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a> — getting sadder</li>
+        <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1E9SEgcQFsXQMv">Spotify 2017 Playlist</a> — more pop?</li>
+        <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM">Spotify 2016 Playlist</a> — pop?</li>
       </ul>
     </section>
 
@@ -87,11 +74,11 @@ body {
         <li>Indonesia — 2017-02, 2017-08, 2018-02, 2018-12</li>
         <li>India — 2015-08</li>
         <li>Japan — 2018-03</li>
-        <li>S. Korea — 2018-06</li>
         <li>Philipines — 2017-08</li>
         <li>Russia — <mark>2000 - 2005</mark></li>
         <li>Sweden — 2018-01</li>
         <li>Singapore — 2017-01</li>
+        <li>South Korea — 2018-06</li>
         <li>Taiwan — <mark>1996 - 2000, 2005 - 2009, 2011 - 2019</mark></li>
         <li>Timor-Leste — 2018-02</li>
         <li>United States — 2019-04</li>
