--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@ body {
     <section>
       <h5>Get Into My <mark>Mind</mark></h5>
       <ul>
-        <li><a href="/blog">Blog</a> — home of random thoughts</li>
+        <li><a href="/blog">blog</a> — home of random thoughts</li>
         <li><a href="/readss">readss</a> — feed of things to read</li>
         <li><a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness</li>
         <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a> — getting sadder</li>
