--- a/src/privacy.html
+++ b/src/privacy.html
@@ -29,27 +29,22 @@ body {
       <h2><a href="/" tabindex="-1">O</a></h2>
     </header>
 
-    <h4><mark>Privacy</mark> Policy</h4>
 
     <section>
+      <h4><mark>Privacy</mark> Policy</h4>
       <h5>Scope</h5>
       <p>Anyone viewing my anything under my site [seankhliao.com](https://seankhliao.com)</p>
     </section>
 
     <section>
-      <h5><mark>Data</mark> Collected</h5>
-      <p>Google Analytics data and Google reCAPTCHA data</p>
+      <h5><mark>Data</mark> Collection</h5>
+      <p>Google Analytics, Google reCAPTCHA, Cloudflare Analytics collect anonymized data through the use of server logs and client side cookies</p>
       <ul>
         <li>Traffic source</li>
         <li>Session information</li>
         <li>Device profile</li>
         <li>and some more</li>
       </ul>
-    </section>
-
-    <section>
-      <h5>Method of Collection</h5>
-      <p>Data is collected with the help of cookies by Google Analytics and Google reCAPTCHA</p>
     </section>
 
     <section>
@@ -65,13 +60,14 @@ body {
 
     <section>
       <h5>Additional <mark>Info</mark></h5>
+      <p>Third party privacy policies</p>
       <ul>
         <li><a href="https://www.cloudflare.com/privacypolicy/">Cloudflare</a> privacy policy</li>
         <li><a href="https://policies.google.com/privacy?hl=en">Google</a> privacy policy</li>
       </ul>
+      <p>Third party terms of service</p>
       <ul>
         <li><a href="https://www.cloudflare.com/website-terms/">Cloudflare</a> terms of service</li>
-        <li><a href="https://firebase.google.com/terms">Firebase</a> terms of service</li>
         <li><a href="https://policies.google.com/terms?hl=en">Google</a> terms of service</li>
         <li><a href="https://www.google.com/analytics/terms/us.html">Google Analytics</a> terms of service</li>
       </ul>
