--- a/src/privacy.html
+++ b/src/privacy.html
@@ -27,17 +27,17 @@ body {
       <h2><a href="/" tabindex="-1">I</a></h2>
       <h2><a href="/" tabindex="-1">A</a></h2>
       <h2><a href="/" tabindex="-1">O</a></h2>
+      <h3><mark>Privacy</mark> Policy</h3>
     </header>
 
 
     <section>
-      <h4><mark>Privacy</mark> Policy</h4>
-      <h5>Scope</h5>
-      <p>Anyone viewing my anything under my site [seankhliao.com](https://seankhliao.com)</p>
+      <h4>Scope</h4>
+      <p>Anyone viewing my anything under my site <a href="https://seankhliao.com">seankhliao.com</a></p>
     </section>
 
     <section>
-      <h5><mark>Data</mark> Collection</h5>
+      <h4><mark>Data</mark> Collection</h4>
       <p>Google Analytics, Google reCAPTCHA, Cloudflare Analytics collect anonymized data through the use of server logs and client side cookies</p>
       <ul>
         <li>Traffic source</li>
@@ -48,18 +48,18 @@ body {
     </section>
 
     <section>
-      <h5>Data <mark>Use</mark></h5>
+      <h4>Data <mark>Use</mark></h4>
       <p>(Aggregate) Tracking information grants me a better understanding od who visits my site, what brought them here, and what they are viewing. This data informs my decisions on the design and content of this site.</p>
       <p>All activity is bound by the <a href="https://www.google.com/analytics/terms/">Google Analytics Terms of Service</a></p>
     </section>
 
     <section>
-      <h5>Choices and <mark>Actions</mark></h5>
+      <h4>Choices and <mark>Actions</mark></h4>
       <p>You can turn off cookies in your browser</p>
     </section>
 
     <section>
-      <h5>Additional <mark>Info</mark></h5>
+      <h4>Additional <mark>Info</mark></h4>
       <p>Third party privacy policies</p>
       <ul>
         <li><a href="https://www.cloudflare.com/privacypolicy/">Cloudflare</a> privacy policy</li>
