--- a/src/readss.html
+++ b/src/readss.html
@@ -1,7 +1,7 @@
-{{ template "head"  . }}
+{{ template "head" . }}
 <title>readss | seankhliao</title>
 
-<script defer src="/readss/index.js"></script>
+<script defer src="/readss.js"></script>
 
 <style>
   ::-webkit-scrollbar {
