--- a/src/authed.html
+++ b/src/authed.html
@@ -6,7 +6,7 @@
 <script defer src="/__/firebase/6.2.0/firebase-auth.js"></script>
 <script defer src="/__/firebase/init.js"></script>
 <script defer src="https://cdn.firebase.com/libs/firebaseui/4.0.0/firebaseui.js"></script>
-<script defer src="/authed/index.js"></script>
+<script defer src="/authed.js"></script>
 
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
