--- a/js/iglog.html
+++ b/js/iglog.html
@@ -6,7 +6,9 @@
 
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
-<h1><a href="/">seankhliao</a> / <mark>iglog</mark></h1>
+<h1>
+  <a href="/">seankhliao</a> / <a href="/iglog"><mark>iglog</mark></a>
+</h1>
 <p>instagram log</p>
 
 <div id="firebaseui-auth-container"></div>
