refactor for styling

--- a/js/authed.html
+++ b/js/authed.html
@@ -6,12 +6,12 @@
 
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
-<h1><a href="/">seankhliao</a> / <mark>authed</mark></h1>
-<p>authenticated test page</p>
+<main>
+  <h1><a href="/">seankhliao</a> / <mark>authed</mark></h1>
+  <p>authenticated test page</p>
 
-<div id="firebaseui-auth-container"></div>
+  <div id="firebaseui-auth-container"></div>
 
-{{ template "loader" }}
-
-<!-- prettier-ignore -->
+  {{ template "loader" }}
+</main>
 {{ template "foot" }}
