--- a/js/iglog.html
+++ b/js/iglog.html
@@ -6,14 +6,14 @@
 
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
-<h1>
-  <a href="/">seankhliao</a> / <a href="/iglog"><mark>iglog</mark></a>
-</h1>
-<p>instagram log</p>
+<main>
+  <h1>
+    <a href="/">seankhliao</a> / <a href="/iglog"><mark>iglog</mark></a>
+  </h1>
+  <p>instagram log</p>
 
-<div id="firebaseui-auth-container"></div>
+  <div id="firebaseui-auth-container"></div>
 
-{{ template "loader" }}
-
-<!-- prettier-ignore -->
+  {{ template "loader" }}
+</main>
 {{ template "foot" }}
