--- a/js/readss.html
+++ b/js/readss.html
@@ -19,10 +19,12 @@
   }
 </style>
 
-<h1><a href="/">seankhliao</a> / <mark>readss</mark></h1>
-<p>Auto updated feed of other people's blog posts</p>
+<main>
+  <h1><a href="/">seankhliao</a> / <mark>readss</mark></h1>
+  <p>Auto updated feed of other people's blog posts</p>
 
-{{ template "loader" }}
+  {{ template "loader" }}
+</main>
 
 <!-- prettier-ignore-->
 {{ template "foot" }}
