style with classes

--- a/js/iglog.html
+++ b/js/iglog.html
@@ -5,6 +5,18 @@
 <script defer src="/iglog.js"></script>
 
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+<style>
+  .g {
+    color: #349264;
+    display: inline-block;
+    width: 10ch;
+  }
+  .r {
+    color: #df3d3d;
+    display: inline-block;
+    width: 10ch;
+  }
+</style>
 
 <main>
   <h1>
