size chat window

--- a/src/seankhbot.html
+++ b/src/seankhbot.html
@@ -17,6 +17,8 @@
   </section>
 
   <iframe
+    width="100%"
+    height="80vh"
     allow="microphone;"
     src="https://console.dialogflow.com/api-client/demo/embedded/ae37d7b3-7ced-4a47-98cb-b90ef30e2dcc"
   >
