--- a/src/404.html
+++ b/src/404.html
@@ -2,12 +2,12 @@
 <title>404 | seankhliao</title>
 <header>
   {{ template "header-name" }}
-  <h3><mark>404</mark> Not Found</h3>
+  <h3><em>404</em> Not Found</h3>
   <p>
     Where did you go?<br />
     I should know<br />
     but it's cold, and I don't wanna be lonely<br />
-    So show me <a href="/"><mark>the way home</mark></a
+    So show me <a href="/"><em>the way home</em></a
     ><br />
     I can't lose another life<br />
   </p>
