--- a/src/privacy.html
+++ b/src/privacy.html
@@ -8,7 +8,7 @@
 
 <header>
   {{ template "header-name" }}
-  <h3><mark>Privacy</mark> Policy</h3>
+  <h3><em>Privacy</em> Policy</h3>
 </header>
 
 <main>
@@ -18,7 +18,7 @@
   </section>
 
   <section>
-    <h4><mark>Data</mark> Collection</h4>
+    <h4><em>Data</em> Collection</h4>
     <p>
       Google Analytics, Google reCAPTCHA, Cloudflare Analytics collect anonymized data through the use of server logs
       and client side cookies
@@ -32,7 +32,7 @@
   </section>
 
   <section>
-    <h4>Data <mark>Use</mark></h4>
+    <h4>Data <em>Use</em></h4>
     <p>
       (Aggregate) Tracking information grants me a better understanding od who visits my site, what brought them here,
       and what they are viewing. This data informs my decisions on the design and content of this site.
@@ -44,12 +44,12 @@
   </section>
 
   <section>
-    <h4>Choices and <mark>Actions</mark></h4>
+    <h4>Choices and <em>Actions</em></h4>
     <p>You can turn off cookies in your browser</p>
   </section>
 
   <section>
-    <h4>Additional <mark>Info</mark></h4>
+    <h4>Additional <em>Info</em></h4>
     <p>Third party privacy policies</p>
     <ul>
       <li><a href="https://www.cloudflare.com/privacypolicy/">Cloudflare</a> privacy policy</li>
