--- a/src/terms.html
+++ b/src/terms.html
@@ -8,7 +8,7 @@
 
 <header>
   {{ template "header-name" }}
-  <h3>Terms of <mark>Service</mark></h3>
+  <h3>Terms of <em>Service</em></h3>
 </header>
 
 <main>
