--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
 
 <main>
   <section>
-    <h4>Hey, I'm <mark>Sean</mark></h4>
+    <h4>Hey, I'm <em>Sean</em></h4>
 
-    <h6><mark>Bleeding Edge</mark> Software Developer</h6>
+    <h6><em>Bleeding Edge</em> Software Developer</h6>
     <p>I have too much time to follow the hype and my stuff is always half-broken</p>
 
-    <h6>Cloud Native <mark>Gopher</mark></h6>
+    <h6>Cloud Native <em>Gopher</em></h6>
     <p>Writes <strong>Go</strong>, runs <strong>Kubernetes</strong></p>
   </section>
 
   <section>
-    <h5>Where to <mark>Find</mark> Me</h5>
+    <h5>Where to <em>Find</em> Me</h5>
     <ul>
       <li><a href="mailto:sean@seankhliao.com">Email</a> — mail, for <em>me</em>?</li>
       <li><a href="https://github.com/seankhliao">Github</a> — build first, regret later</li>
@@ -31,7 +31,7 @@
   </section>
 
   <section>
-    <h5>Get Into My <mark>Mind</mark></h5>
+    <h5>Get Into My <em>Mind</em></h5>
     <ul>
       <li><a href="/blog">blog</a> — home of random thoughts</li>
       <li><a href="/readss">readss</a> — feed of things to read</li>
@@ -56,20 +56,20 @@
   </picture>
 
   <section>
-    <h5>Travel <mark>Log</mark></h5>
+    <h5>Travel <em>Log</em></h5>
     <ul>
       <li>Canada — 2019-04</li>
-      <li>England — <mark>2009 - 2011</mark></li>
+      <li>England — <em>2009 - 2011</em></li>
       <li>Hong Kong — 2017-08</li>
       <li>Indonesia — 2017-02, 2017-08, 2018-02, 2018-12</li>
       <li>India — 2015-08</li>
       <li>Japan — 2018-03</li>
       <li>Philipines — 2017-08</li>
-      <li>Russia — <mark>2000 - 2005</mark></li>
+      <li>Russia — <em>2000 - 2005</em></li>
       <li>Sweden — 2018-01</li>
       <li>Singapore — 2017-01</li>
       <li>South Korea — 2018-06</li>
-      <li>Taiwan — <mark>1996 - 2000, 2005 - 2009, 2011 - 2019</mark></li>
+      <li>Taiwan — <em>1996 - 2000, 2005 - 2009, 2011 - 2019</em></li>
       <li>Timor-Leste — 2018-02</li>
       <li>United States — 2019-04</li>
     </ul>
