--- a/js/authed.html
+++ b/js/authed.html
@@ -7,7 +7,7 @@
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
 
 <main>
-  <h1><a href="/">seankhliao</a> / <mark>authed</mark></h1>
+  <h1><a href="/">seankhliao</a> / <em>authed</em></h1>
   <p>authenticated test page</p>
 
   <div id="firebaseui-auth-container"></div>
