--- a/js/readss.html
+++ b/js/readss.html
@@ -20,7 +20,7 @@
 </style>
 
 <main>
-  <h1><a href="/">seankhliao</a> / <mark>readss</mark></h1>
+  <h1><a href="/">seankhliao</a> / <em>readss</em></h1>
   <p>Auto updated feed of other people's blog posts</p>
 
   {{ template "loader" }}
