--- a/js/iglog.html
+++ b/js/iglog.html
@@ -20,7 +20,7 @@
 
 <main>
   <h1>
-    <a href="/">seankhliao</a> / <a href="/iglog"><mark>iglog</mark></a>
+    <a href="/">seankhliao</a> / <a href="/iglog"><em>iglog</em></a>
   </h1>
   <p>instagram log</p>
 
