update summary of me

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,17 @@
     <h3>Hey, I'm <em>Sean</em></h3>
 
     <h5><em>Bleeding Edge</em> Software Developer</h5>
-    <p>I have too much time to follow the hype and my stuff is always half-broken</p>
+    <p>I run with shiny new stuff that is always <em>half</em>-broken, so I know what actually works</p>
 
-    <h5>Cloud Native <em>Gopher</em></h5>
-    <p>Writes <strong>Go</strong>, runs <strong>Kubernetes</strong></p>
+    <h5><em>Cloud Native</em> Gopher</h5>
+    <p><em>Current preferred tech stack:</em> Go microservices — Docker containers — Google Kubernetes Engine</p>
+    <p>I'll do anything except touching frontend</p>
+
+    <h5><em>MSc</em> Security and Network Engineering</h5>
+    <p>2019-2020 University of Amsterdam</p>
+
+    <h6><em>BBA</em> Information Management</h6>
+    <p>2014-2018 National Taiwan University</p>
   </section>
 
   <section>
@@ -36,17 +43,12 @@
       <li><a href="/blog">blog</a> — home of random thoughts</li>
       <li><a href="/readss">readss</a> — feed of things to read</li>
       <li><a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness</li>
-      <li>
-        <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a> —
-        getting sadder
-      </li>
-      <li>
-        <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1E9SEgcQFsXQMv">Spotify 2017 Playlist</a> — more
-        pop?
-      </li>
-      <li>
-        <a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM">Spotify 2016 Playlist</a> — pop?
-      </li>
+      <!-- prettier-ignore -->
+      <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a> — getting sadder</li>
+      <!-- prettier-ignore -->
+      <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1E9SEgcQFsXQMv">Spotify 2017 Playlist</a> — more pop?</li>
+      <!-- prettier-ignore -->
+      <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM">Spotify 2016 Playlist</a> — pop?</li>
     </ul>
   </section>
 
