--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,22 @@
   <section>
     <h3>Hey, I'm <em>Sean</em></h3>
 
-    <h5><em>Bleeding Edge</em> Software Developer</h5>
+    <h5><em>Bleeding Edge</em> Cloud Native Software Developer</h5>
     <p>I run with shiny new stuff that is always <em>half</em>-broken, so I know what actually works</p>
-
-    <h5><em>Cloud Native</em> Gopher</h5>
+    <p>I'll do anything except touch <em>frontend</em></p>
     <p><em>Current preferred tech stack:</em> Go microservices — Docker containers — Google Kubernetes Engine</p>
-    <p>I'll do anything except touching frontend</p>
 
     <h5><em>MSc</em> Security and Network Engineering</h5>
-    <p>2019-2020 University of Amsterdam</p>
-
-    <h6><em>BBA</em> Information Management</h6>
-    <p>2014-2018 National Taiwan University</p>
+    <p><em>2019-2020</em> University of Amsterdam</p>
+    <!--prettier-ignore -->
+    <p><strong><em>BBA</em> Information Management</strong></p>
+    <p><em>2014-2018</em> National Taiwan University</p>
   </section>
 
   <section>
     <h4>Where to <em>Find</em> Me</h4>
     <ul>
+      <li><a href="/blog">Blog</a> — home of random thoughts</li>
       <li><a href="mailto:sean@seankhliao.com">Email</a> — mail, for <em>me</em>?</li>
       <li><a href="https://github.com/seankhliao">Github</a> — build first, regret later</li>
       <li><a href="https://github.com/erred">Github Org</a> — where old code goes to die</li>
@@ -40,8 +39,6 @@
   <section>
     <h4>Get Into My <em>Mind</em></h4>
     <ul>
-      <li><a href="/blog">blog</a> — home of random thoughts</li>
-      <li><a href="/readss">readss</a> — feed of things to read</li>
       <li><a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness</li>
       <!-- prettier-ignore -->
       <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a> — getting sadder</li>
