--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,20 @@
   <section>
     <h3>Hey, I'm <em>Sean</em></h3>
 
-    <h5><em>Bleeding Edge</em> Cloud Native Software Developer</h5>
+    <h5><em>Bleeding</em> Edge Cloud Native Software Developer</h5>
     <p>I run with shiny new stuff that is always <em>half</em>-broken, so I know what actually works</p>
     <p>I'll do anything except touch <em>frontend</em></p>
-    <p><em>Current preferred tech stack:</em> Go microservices — Docker containers — Google Kubernetes Engine</p>
+    <p>Current <em>preferred</em> tech stack:</p>
+    <p>Go microservices — Docker containers — Kubernetes — Google Cloud Platform</p>
+  </section>
+
+  <section>
+    <h4>What I've been <em>doing</em></h4>
 
     <h5><em>MSc</em> Security and Network Engineering</h5>
     <p><em>2019-2020</em> University of Amsterdam</p>
-    <!--prettier-ignore -->
-    <p><strong><em>BBA</em> Information Management</strong></p>
+
+    <h5><em>BBA</em> Information Management</h5>
     <p><em>2014-2018</em> National Taiwan University</p>
   </section>
 
