--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   </section>
 
   <section>
-    <h4>What I've been <em>doing</em></h4>
+    <h4>What I've Been <em>Doing</em></h4>
 
     <h5><em>MSc</em> Security and Network Engineering</h5>
     <p><em>2019-2020</em> University of Amsterdam</p>
