--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   <section>
     <h3>Hey, I'm <em>Sean</em></h3>
 
-    <h5><em>Bleeding</em> Edge</h5>
-    <p>I run with shiny new stuff that is always <em>half</em>-broken, so I know what actually works</p>
-    <h5><em>Cloud</em> Native</h5>
-    <p>Current <em>preferred</em> tech stack:</p>
+    <h5><em>Bleeding</em> Edge Cloud Native</h5>
+    <p>
+      I run with shiny new stuff that is always <em>half</em>-broken, so I know what actually works. Current
+      <em>preferred</em> tech stack:
+    </p>
     <p>Go microservices — Docker containers — Kubernetes — Google Cloud Platform</p>
+
     <h5>Software <em>Developer</em></h5>
     <p>I'll do anything except touch <em>frontend</em></p>
   </section>
