add projects page

--- a/src/index.html
+++ b/src/index.html
@@ -36,25 +36,19 @@
   </section>
 
   <section>
-    <h4>Where to <em>Find</em> Me</h4>
+    <h4>My <em>Stuff</em></h4>
     <ul>
       <li><a href="/blog">Blog</a> — home of random thoughts</li>
-      <li><a href="mailto:sean@seankhliao.com">Email</a> — mail, for <em>me</em>?</li>
-      <li><a href="https://github.com/seankhliao">Github</a> — build first, regret later</li>
-      <li><a href="https://github.com/erred">Github Org</a> — where old code goes to die</li>
+      <li><a href="/projects">Projects</a> — hummary of interesting projects</li>
     </ul>
   </section>
 
   <section>
-    <h4>Get Into My <em>Mind</em></h4>
+    <h4><em>Find</em> Me</h4>
     <ul>
-      <li><a href="https://instagram.com/seankhliao">Instagram</a> — private, stream of consciousness</li>
-      <!-- prettier-ignore -->
-      <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1EjwWZRNXDwjdE">Spotify 2018 Playlist</a> — getting sadder</li>
-      <!-- prettier-ignore -->
-      <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1E9SEgcQFsXQMv">Spotify 2017 Playlist</a> — more pop?</li>
-      <!-- prettier-ignore -->
-      <li><a href="https://open.spotify.com/user/spotify/playlist/37i9dQZF1CyMhRDKkjuojM">Spotify 2016 Playlist</a> — pop?</li>
+      <li><a href="mailto:sean@seankhliao.com">Email</a> — for me?</li>
+      <li><a href="https://github.com/seankhliao">Github</a> — build first, regret later</li>
+      <li><a href="https://github.com/erred">Github Org</a> — where old code goes to die</li>
     </ul>
   </section>
 
