--- a/src/projects.html
+++ b/src/projects.html
@@ -81,6 +81,15 @@
       <li>Github: <a href="https://github.com/seankhliao/wggo">seankhliao/wggo</a></li>
     </ul>
 
+    <h5>cloud-<em>build</em>-tools</h5>
+    <p>
+      Assorted samller things mostly for use with Google <em>Cloud Build</em>. Maybe some of them should be their own repo / project.
+      Archlinux in a container was interesting...
+    </p>
+    <ul>
+      <li>Github: <a href="https://github.com/seankhliao/cloud-build-tools">seankhliao/cloud-build-tools</a></li>
+    </ul>
+
     <h5>ear<em>bug</em></h5>
     <p>
       Currently just logs my <em>Spotify</em> listening history into a storage bucket. One day I'll find something
