--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <h4>My <em>Stuff</em></h4>
     <ul>
       <li><a href="/blog">Blog</a> — home of random thoughts</li>
-      <li><a href="/projects">Projects</a> — hummary of interesting projects</li>
+      <li><a href="/projects">Projects</a> — summary of interesting projects</li>
     </ul>
   </section>
 
