add belgium to map

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
   <section>
     <h4>Travel <em>Log</em></h4>
     <ul>
+      <li>Belgium — 2019-10</li>
       <li>Canada — 2019-04</li>
       <li>England — <em>2009 - 2011</em></li>
       <li>Hong Kong — 2017-08</li>
