add trip to london

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <ul>
       <li>Belgium — 2019-10</li>
       <li>Canada — 2019-04</li>
-      <li>England — <em>2009 - 2011</em></li>
+      <li>England — <em>2009 - 2011</em>, 2019-10</li>
       <li>Hong Kong — 2017-08</li>
       <li>Indonesia — 2017-02, 2017-08, 2018-02, 2018-12</li>
       <li>India — 2015-08</li>
