--- a/src/index.html
+++ b/src/index.html
@@ -60,20 +60,24 @@
   <section>
     <h4>Travel <em>Log</em></h4>
     <ul>
+      <!-- <li>Austria — 2019-12</li> -->
       <li>Belgium — 2019-10</li>
       <li>Canada — 2019-04</li>
+      <!-- <li>Czechia — 2019-12</li> -->
       <li>England — <em>2009 - 2011</em>, 2019-10</li>
+      <!-- <li>France — 2020-07</li> -->
+      <!-- <li>Germany — 2019-12</li> -->
       <li>Hong Kong — 2017-08</li>
-      <li>Indonesia — 2017-02, 2017-08, 2018-02, 2018-12</li>
       <li>India — 2015-08</li>
-      <li>Luxemboutg — 2019-10</li>
+      <li>Indonesia — 2017-02, 2017-08, 2018-02, 2018-12</li>
       <li>Japan — 2018-03</li>
+      <li>Luxembourg — 2019-10</li>
       <li>Netherlands — <em>2019 - 2020</em></li>
       <li>Philipines — 2017-08</li>
       <li>Russia — <em>2000 - 2005</em></li>
-      <li>Sweden — 2018-01</li>
       <li>Singapore — 2017-01</li>
       <li>South Korea — 2018-06</li>
+      <li>Sweden — 2018-01</li>
       <li>Taiwan — <em>1996 - 2000, 2005 - 2009, 2011 - 2019</em></li>
       <li>Timor-Leste — 2018-02</li>
       <li>United States — 2019-04</li>
