add advent of code

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -12,6 +12,7 @@
   <section>
     <h3><em>current</em> focus</h3>
     <ul>
+      <li>advent of code: <a href="https://adventofcode.com/2019">2019</a></li>
       <li>gophers: <a href="https://app.slack.com/client/T029RQSE6/C029RQSEE">slack</a></li>
       <li>golang/go: <a href="https://github.com/golang/go/issues">issues</a></li>
       <li>go-nuts: <a href="https://groups.google.com/forum/#!forum/golang-nuts">google group</a></li>
