better use of space

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -12,22 +12,37 @@
   <section>
     <h3><em>current</em> focus</h3>
     <ul>
-      <li>advent of code: <a href="https://adventofcode.com/2019">2019</a></li>
-      <li>gophers: <a href="https://app.slack.com/client/T029RQSE6/C029RQSEE">slack</a></li>
-      <li>golang/go: <a href="https://github.com/golang/go/issues">issues</a></li>
-      <li>go-nuts: <a href="https://groups.google.com/forum/#!forum/golang-nuts">google group</a></li>
+      <li>
+        advent of code:
+        <a href="https://adventofcode.com/2019">2019</a>
+        <a href="https://github.com/seankhliao/aoc-2019">repo</a>
+      </li>
+      <li>
+        go:
+        <a href="https://app.slack.com/client/T029RQSE6/C029RQSEE">slack</a>
+        <a href="https://github.com/golang/go/issues">issues</a>
+        <a href="https://groups.google.com/forum/#!forum/golang-nuts">google group</a>
+      </li>
     </ul>
   </section>
 
   <section>
     <h3><em>to</em> read</h3>
     <ul>
-      <li><a href="https://xkcd.com/">xkcd</a></li>
-      <li><a href="https://jbd.dev/">Jaana</a></li>
-      <li><a href="https://jess.dev/">Jess</a></li>
-      <li><a href="https://twitter.com/home">twitter</a></li>
-      <!-- prettier-ignore -->
-      <li><a href="http://n-gate.com/">hn summary <em>sunday</em></a></li>
+      <li>
+        blogs:
+        <a href="https://jbd.dev/">Jaana</a>
+        <a href="https://jess.dev/">Jess</a>
+      </li>
+      <li>
+        comics:
+        <a href="https://xkcd.com/">xkcd</a>
+      </li>
+      <li>
+        webshit:
+        <a href="https://twitter.com/home">twitter</a>
+        <a href="http://n-gate.com/">hn summary <em>sunday</em></a>
+      </li>
     </ul>
   </section>
 
@@ -35,10 +50,16 @@
     <h3>SNE <em>coursework</em></h3>
     <ul>
       <li>uva-sne: <a href="https://github.com/seankhliao/uva-sne">github</a></li>
-      <li>INR: <a href="https://www.os3.nl/2019-2020/courses/inr/start">course</a></li>
-      <li>INR: <a href="https://www.os3.nl/2019-2020/students/sean_liao/inr">labs</a></li>
-      <li>LS: <a href="https://www.os3.nl/2019-2020/courses/ls/start">course</a></li>
-      <li>LS: <a href="https://github.com/seankhliao/uva-ls">project</a></li>
+      <li>
+        INR:
+        <a href="https://www.os3.nl/2019-2020/courses/inr/start">course</a>
+        <a href="https://www.os3.nl/2019-2020/students/sean_liao/inr">labs</a>
+      </li>
+      <li>
+        LS:
+        <a href="https://www.os3.nl/2019-2020/courses/ls/start">course</a>
+        <a href="https://github.com/seankhliao/uva-ls">project</a>
+      </li>
     </ul>
   </section>
 </main>
