--- a/src/newtab.html
+++ b/src/newtab.html
@@ -21,7 +21,7 @@
         go:
         <a href="https://app.slack.com/client/T029RQSE6/C029RQSEE">slack</a>
         <a href="https://github.com/golang/go/issues">issues</a>
-        <a href="https://groups.google.com/forum/#!forum/golang-nuts">google group</a>
+        <a href="https://groups.google.com/forum/#!forum/golang-nuts">go-nuts</a>
       </li>
     </ul>
   </section>
@@ -33,15 +33,23 @@
         blogs:
         <a href="https://jbd.dev/">Jaana</a>
         <a href="https://jess.dev/">Jess</a>
+        <a href="https://meowni.ca/">Monica</a>
       </li>
       <li>
         comics:
         <a href="https://xkcd.com/">xkcd</a>
+        <a href="https://www.smbc-comics.com/">smbc</a>
+        <a href="http://turnoff.us/">turnoff.us</a>
+        <a href="https://faasandfurious.com">faasandfurious</a>
       </li>
       <li>
         webshit:
         <a href="https://twitter.com/home">twitter</a>
         <a href="http://n-gate.com/">hn summary <em>sunday</em></a>
+      </li>
+      <li>
+        other:
+        <a href="https://azeria-labs.com/">azeria</a>
       </li>
     </ul>
   </section>
