add project link

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -13,6 +13,10 @@
     <h3><em>current</em> focus</h3>
     <ul>
       <li>
+        gh projects:
+        <a href="https://github.com/users/seankhliao/projects/4?fullscreen=true">sne</a>
+      </li>
+      <li>
         advent of code:
         <a href="https://adventofcode.com/2019">2019</a>
         <a href="https://github.com/seankhliao/aoc-2019">repo</a>
