--- a/src/newtab.html
+++ b/src/newtab.html
@@ -13,10 +13,6 @@
     <h3><em>current</em> focus</h3>
     <ul>
       <li>
-        gh projects:
-        <a href="https://github.com/users/seankhliao/projects/4?fullscreen=true">sne</a>
-      </li>
-      <li>
         advent of code:
         <a href="https://adventofcode.com/2019">2019</a>
         <a href="https://github.com/seankhliao/aoc-2019">repo</a>
@@ -43,7 +39,6 @@
         comics:
         <a href="https://xkcd.com/">xkcd</a>
         <a href="https://www.smbc-comics.com/">smbc</a>
-        <a href="http://turnoff.us/">turnoff.us</a>
         <a href="https://faasandfurious.com">faasandfurious</a>
       </li>
       <li>
@@ -61,7 +56,11 @@
   <section>
     <h3>SNE <em>coursework</em></h3>
     <ul>
-      <li>uva-sne: <a href="https://github.com/seankhliao/uva-sne">github</a></li>
+      <li>
+        uva-sne:
+        <a href="https://github.com/seankhliao/uva-sne">github</a>
+        <a href="https://github.com/users/seankhliao/projects/4?fullscreen=true">kanban</a>
+      </li>
       <li>
         INR:
         <a href="https://www.os3.nl/2019-2020/courses/inr/start">course</a>
