--- a/src/newtab.html
+++ b/src/newtab.html
@@ -40,6 +40,7 @@
         <a href="https://xkcd.com/">xkcd</a>
         <a href="https://www.smbc-comics.com/">smbc</a>
         <a href="https://faasandfurious.com">faasandfurious</a>
+        <a href="https://www.thefarside.com/">thefarside</a>
       </li>
       <li>
         webshit:
@@ -60,16 +61,6 @@
         uva-sne:
         <a href="https://github.com/seankhliao/uva-sne">github</a>
         <a href="https://github.com/users/seankhliao/projects/4?fullscreen=true">kanban</a>
-      </li>
-      <li>
-        INR:
-        <a href="https://www.os3.nl/2019-2020/courses/inr/start">course</a>
-        <a href="https://www.os3.nl/2019-2020/students/sean_liao/inr">labs</a>
-      </li>
-      <li>
-        LS:
-        <a href="https://www.os3.nl/2019-2020/courses/ls/start">course</a>
-        <a href="https://github.com/seankhliao/uva-ls">project</a>
       </li>
     </ul>
   </section>
