--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
       <!-- <li>Czechia — 2019-12</li> -->
       <li>England — <em>2009 - 2011</em>, 2019-10</li>
       <!-- <li>France — 2020-07</li> -->
-      <!-- <li>Germany — 2019-12</li> -->
+      <li>Germany — 2019-12</li>
       <li>Hong Kong — 2017-08</li>
       <li>India — 2015-08</li>
       <li>Indonesia — 2017-02, 2017-08, 2018-02, 2018-12</li>
