--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
   <section>
     <h4>Travel <em>Log</em></h4>
     <ul>
-      <!-- <li>Austria — 2019-12</li> -->
+      <li>Austria — 2019-12</li>
       <li>Belgium — 2019-10</li>
       <li>Canada — 2019-04</li>
       <!-- <li>Czechia — 2019-12</li> -->
