--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       <!-- <li>Austria — 2019-12</li> -->
       <li>Belgium — 2019-10</li>
       <li>Canada — 2019-04</li>
-      <!-- <li>Czechia — 2019-12</li> -->
+      <li>Czechia — 2019-12</li>
       <li>England — <em>2009 - 2011</em>, 2019-10</li>
       <!-- <li>France — 2020-07</li> -->
       <!-- <li>Germany — 2019-12</li> -->
