--- a/src/newtab.html
+++ b/src/newtab.html
@@ -13,11 +13,6 @@
     <h3><em>current</em> focus</h3>
     <ul>
       <li>
-        advent of code:
-        <a href="https://adventofcode.com/2019">2019</a>
-        <a href="https://github.com/seankhliao/aoc-2019">repo</a>
-      </li>
-      <li>
         go:
         <a href="https://app.slack.com/client/T029RQSE6/C029RQSEE">slack</a>
         <a href="https://github.com/golang/go/issues">issues</a>
@@ -55,8 +50,18 @@
   </section>
 
   <section>
-    <h3>SNE <em>coursework</em></h3>
+    <h3>Other</h3>
     <ul>
+      <li>
+        {
+        <a href="https://repo.new">repo</a>
+        <a href="https://playlist.new">playlist</a>
+        <a href="https://doc.new">doc</a>
+        <a href="https://slide.new">slide</a>
+        <a href="https://sheet.new">sheet</a>
+        <a href="https://keep.new">keep</a>
+        }.new
+      </li>
       <li>
         uva-sne:
         <a href="https://github.com/seankhliao/uva-sne">github</a>
