more things to do

--- a/src/newtab.html
+++ b/src/newtab.html
@@ -18,6 +18,11 @@
         <a href="https://github.com/golang/go/issues">issues</a>
         <a href="https://groups.google.com/forum/#!forum/golang-nuts">go-nuts</a>
       </li>
+      <li>
+        web:
+        <a href="https://amp.dev/documentation/guides-and-tutorials/learn/spec/amphtml/">amphtml</a>
+        <a href="https://github.com/WICG/webpackage">webpackage</a>
+      </li>
     </ul>
   </section>
 
